--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
-  "devDependencies": {
-    "prettier": "3.1.0"
-  }
+  "name": "05_JavaScript_functions",
+  "version": "1.0.0",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "lint": "npx prettier. --check"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
