--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "lint": "npx prettier. --check"
+    "lint": "npx prettier. --check",
+    "lint:fix": "npx prettier. --write"
+
   },
   "keywords": [],
   "author": "",
