--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "lint": "npx prettier --check",
     "lint:fix": "npx prettier --write"
-
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "Dependencies": {
-    "prettier": "3.0.3"}
+    "prettier": "3.0.3"
+  }
 }
